--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <div id="app"></div>
     <script src="./static/moment.min.js"></script>
+    <script src="./static/leader-line.min.js"></script>
     <!-- built files will be auto injected -->
   </body>
 </html>
