--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div id="app"></div>
     <script src="./static/moment.min.js"></script>
     <script src="./static/leader-line.min.js"></script>
+    <script src="./static/plain-draggable.min.js"></script>
     <!-- built files will be auto injected -->
   </body>
 </html>
