--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="./static/d3.min.js"></script>
+    <!-- <script src="./static/d3.min.js"></script> -->
     <script src="./static/moment.min.js"></script>
     <script src="./static/leader-line.min.js"></script>
     <script src="./static/plain-draggable.min.js"></script>
